# not-doom

./: .clang-format  .gitignore  .justfile  CMakeLists.txt
src/: Camera.cpp  Camera.hpp  ComponentManager.hpp  ComponentVector.hpp  Debug.hpp  Doom.cpp  Doom.hpp  EntityManager.cpp  EntityManager.hpp  Game.cpp  Game.hpp  GraphicsComponent.cpp  GraphicsComponent.hpp  InputManager.cpp  InputManager.hpp  Logger.cpp  Logger.hpp  LoggingManager.cpp  LoggingManager.hpp  Matrix4x4.hpp  Mesh.hpp  MeshComponent.hpp  PackedArray.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  Player.cpp  Player.hpp  Quaternion.hpp  RenderComponent.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  TransformComponent.hpp  Vec2.cpp  Vec2.hpp  Vec3.cpp  Vec3.hpp  Vector2.hpp  Vector3.hpp  (+1 more)
tests/: ComponentManager.test.cpp  EntityManager.test.cpp  Game.test.cpp  Math.test.cpp  Matrix4x4.test.cpp  Quaternion.test.cpp
